# Kursovaya

./: .gitignore  CMakeLists.txt  FBToSVGConverter.cpp  FBToSVGConverter.h  README.md  build.bat  main.cpp  Отчёт Курсовая.docx
src/: CMakeLists.txt  FBToSVGConverter.cpp  FBToSVGConverter.h
